[project]
name = "2025-p1-wenxiy"
version = "0.1.0"
description = ""
authors = [
    {name = "Xin_Wen",email = "xin.wen5@student.uq.edu.au"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
